# ludicrouslink

./: .gitignore  CLAUDE.md  README.md  build.gradle.kts  mkdocs.yml  pyproject.toml  settings.gradle.kts
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
android-app/: build.gradle  gradle.properties  settings.gradle
android-app/app/: build.gradle
backend/: .gitignore  build.gradle.kts  go.mod  go.sum  main.go
docs/: README.md  adb-wifi.md  api.md  architecture.md  audio-implementation.md  build-system.md  cicd.md  configuration.md  development.md  getting-started.md  index.md  install-as-service.md  integrated-web-server.md  migration-v1-to-v2.md  network-setup.md  port-change-summary.md  project-structure.md  quick-reference.md  quick-start.md  quickstart-v1.md  readme-v2.md  test-streaming.md  troubleshooting.md  video-architecture.md
docs/components/: android.md  backend.md  frontend.md
frontend/: build.gradle.kts  index.html  package-lock.json  package.json  setup_dependencies.bat  tsconfig.app.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
hstreamerAndroid/: settings.gradle.kts
hstreamerAndroid/app/: build.gradle.kts
hstreamerAndroid/gradle/: libs.versions.toml
ludicrouslinkAndroid/app/: build.gradle.kts
pi-gateway/: gateway.py  hstreamer-gateway.service  nginx.conf  setup_v2.sh
proto/: build.gradle.kts  hstreamer.fbs  ludicrouslink.fbs
prototyping/pi-gateway/: gateway.py  nginx.conf  (+5 more)
web-client/: client.js  index.html
(+100 files in other folders)
