[project]
name = "ludicrouslink-docs"
version = "1.0.0"
description = "Documentation for LudicrousLink"
requires-python = ">=3.10"

[project.optional-dependencies]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
